--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 此项目使用了 git submodule 
-请使用 git clone --recursive https://github.com/ld3003/p2ptun 来获取项目完整源码
+请使用 git clone --recursive https://github.com/ld3003/p2ptun_qttest 来获取项目完整源码
